CSS: Align overdue timestamp correctly

--- a/public/css/lists.less
+++ b/public/css/lists.less
@@ -28,6 +28,7 @@
     .rounded-corners();
     background-color: @color-critical;
     color: white;
+    margin-right: -.5em;
     padding: 0 0.5em;
   }
 
